syntax = "proto3";
option csharp_namespace = "HydroMeasure.Api.Protos";
package UnidadeService;

import "Protos/condominio.proto"; // Importa OperationResultGrpcBool

enum TipoUnidade {
  TIPO_UNIDADE_UNSPECIFIED = 0;
  RESIDENCIAL = 1;
  COMERCIAL = 2;
  INDUSTRIAL = 3;
}

enum StatusUnidade {
  STATUS_UNIDADE_UNSPECIFIED = 0;
  ATIVO = 1;
  INATIVO = 2;
  PENDENTE = 3;
}

message UnidadeGrpcDto {
  string id = 1;
  string condominioId = 2;
  string identificacao = 3;
  TipoUnidade tipo = 4;
  string moradorResponsavel = 5;
  double mediaConsumo = 6;
  bool ativo = 7;
  StatusUnidade status = 8;
}

message CreateUnidadeRequest {
  string condominioId = 1;
  string identificacao = 2;
  TipoUnidade tipo = 3;
  string moradorResponsavel = 4;
  double mediaConsumo = 5;
}

message OperationResultGrpcUnidadeDto {
  bool success = 1;
  string message = 2;
  UnidadeGrpcDto data = 3;
  string errorCode = 4;
  repeated string errors = 5;
}

message OperationResultGrpcBoolUnidade {
  bool success = 1;
  string message = 2;
  bool data = 3;
  string errorCode = 4;
  repeated string errors = 5;
}


message CreateUnidadeResponse {
  OperationResultGrpcUnidadeDto result = 1;
}

message UpdateUnidadeRequest {
  string id = 1; // Guid como string
  string condominioId = 2; // Guid como string
  string identificacao = 3;
  string tipo = 4; // TipoUnidade como string (enum)
  string moradorResponsavel = 5;
  double mediaConsumo = 6; // decimal no C# -> double no proto
  bool ativo = 7;
  string status = 8; // StatusUnidade como string (enum)
}

message UpdateUnidadeResponse {
  OperationResultGrpcUnidadeDto result = 1;
}

message GetUnidadeByIdRequest {
  string id = 1; // Guid como string
}

message GetUnidadeByIdResponse {
  UnidadeGrpcDto unidade = 1; // Pode ser nulo
}

message GetAllUnidadesRequest {
  // Sem parâmetros por enquanto
}

message GetAllUnidadesResponse {
  repeated UnidadeGrpcDto unidades = 1;
}

message DeleteUnidadeRequest {
  string id = 1; // Guid como string
}

message DeleteUnidadeResponse {
  OperationResultGrpcBoolUnidade result = 1; // Reutilizando OperationResultGrpcBool de condominio.proto
}


service UnidadeGrpcService {
  rpc CreateUnidade (CreateUnidadeRequest) returns (CreateUnidadeResponse);
  rpc UpdateUnidade (UpdateUnidadeRequest) returns (UpdateUnidadeResponse);
  rpc GetUnidadeById (GetUnidadeByIdRequest) returns (GetUnidadeByIdResponse);
  rpc GetAllUnidades (GetAllUnidadesRequest) returns (GetAllUnidadesResponse);
  rpc DeleteUnidade (DeleteUnidadeRequest) returns (DeleteUnidadeResponse);
}
